# se101_mitone

./: README.md  meson.build
docs/: GPIO Handling.md  Test Plan.md
src/: main.c  parse_notes.c  parse_notes.h  read_gpio.c  read_gpio.h
src/synth/: note.h  synth.c  synth.h
